1.6.5 form: add filter, msg z-index fix

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -290,7 +290,11 @@
 	grid-template-columns: [name-start email-start] 2fr [name-end email-end message-start submit-start] 3fr [message-end submit-end];
 	grid-gap: 21px 23px;
 	grid-template-rows: [name-start message-start] 60px [name-end email-start] 60px [email-end message-end submit-start] 60px [submit-end];
+	transition: filter 0.3s ease;
 
+	&.form-inactive {
+		filter: blur(3px);
+	}
 	.name-input-wrapper {
 		grid-area: name;
 	}
@@ -367,6 +371,7 @@
 	opacity: 0;
 	visibility: hidden;
 	transition: all 0.3s ease;
+	z-index: 10;
 
 	&.show-message {
 		opacity: 1;
